	- Add support for SQLSTATE via $dbh->state()
		[Greg Sabino Mullane]
	- Major overhaul of prepare/execute to handle new server-side 
		prepare system. [Greg Sabino Mullane]
	- Add DBD_TRACE to some tests for better debugging.
	- Make the tests honor the DBD_SCHEMA variable instead of 
		assuming that "public" is available.
		[Rainer Weikusat]
	- ddbimp.c cleanups: better error messages, ensure commit
		is only called one after a transaction fails.
		[Alexey Slynko]
	- primary_key() returns empty list not undef if no match.
		[Julian Mehnle]
	- Added the pg_protocol database handle attribute
		[Greg Sabino Mullane]
	- Changed "noprefix" to pg_noprefix
1.32 Wed Feb 25 18:24:18 UTC 2004
	- Bugfix for memory allocation problems on win systems
		[Rafael Kitover <caelum@debian.org>]
	- Rewrote the foreign_key_info() method to handle 
		multi-column keys. [Greg Sabino Mullane]
	- Rewrote the primary_key_info() and primary_key() methods to 
		cleanly handle multi-column primary keys. Also added a "pg_onerow" 
		attribute to allow primary_key_info() to return a single 
		row containing multiple-column information. [Greg Sabino Mullane]
	- Switched commit behavior from commit->execute->begin 
		to begin->execute->commit
		[xelah-junk@xelah.com]
	- Made the _pg_use_catalog subroutine use {private_dbgpg}.
		(CPAN bug #4841) [Greg Sabino Mullane]
	- Changed strdup to safemalloc/strcpy in dbdimp.c
		(CPAN bug #4578) [anonymous CPAN user]
	- Made the data_sources method escape the database names as needed.
		Added support for databases with spaces in their names.
		[Greg Sabino Mullane]
	- Added the "noprefix" attribute to prevent the tables() method 
		from prepending the schema name. [Greg Sabino Mullane]
	- Rewrote the testing suite. Many more tests are performed.
		Servers with a low client_min_messages are handled correctly.
		[Greg Sabino Mullane]
	- Fixed bug causing '$\d' to be picked up as a placeholder. 
		(CPAN bug #4799) [Greg Sabino Mullane]